--- a/index.html
+++ b/index.html
@@ -1,35 +1,16 @@
-<h1>William Blake </h1>
-
-<p>
-17 south molton street<br/>
-London<br/>
-W1K 5QT<br/>
-UK
-</p>
-
+<h1>The best movies according to Yulesh</h1>
+<h2>The top 3 movies that I have watched.</h2>
 <hr/>
-
-
-<p>William Blake (28 November 1757 – 12 August 1827) was an English poet, painter, and printmaker. Largely unrecognised
-during his life, Blake is now considered a seminal figure in the history of the poetry and visual art of the Romantic
-Age. What he called his "prophetic works" were said by 20th-century critic Northrop Frye to form "what is in proportion
-to its merits the least read body of poetry in the English language".[2] His visual artistry led 21st-century critic
-Jonathan Jones to proclaim him "far and away the greatest artist Britain has ever produced".[3] In 2002, Blake was
-placed at number 38 in the BBC's poll of the 100 Greatest Britons.[4] While he lived in London his entire life, except
-for three years spent in Felpham,[5] he produced a diverse and symbolically rich collection of works, which embraced the
-imagination as "the body of God"[6] or "human existence itself".[7]</p>
-
-<p>Although Blake was considered mad by contemporaries for his idiosyncratic views, he is held in high regard by later
-critics for his expressiveness and creativity, and for the philosophical and mystical undercurrents within his work. His
-paintings and poetry have been characterised as part of the Romantic movement and as "Pre-Romantic".[8] In fact, he has
-been said to be "a key early proponent of both Romanticism and Nationalism".[9] A committed Christian who was hostile to
-the Church of England (indeed, to almost all forms of organised religion), Blake was influenced by the ideals and
-ambitions of the French and American revolutions.[10][11] Though later he rejected many of these political beliefs, he
-maintained an amiable relationship with the political activist Thomas Paine; he was also influenced by thinkers such as
-Emanuel Swedenborg.[12] Despite these known influences, the singularity of Blake's work makes him difficult to classify.
-The 19th-century scholar William Michael Rossetti characterised him as a "glorious luminary",[13] and "a man not
-forestalled by predecessors, nor to be classed with contemporaries, nor to be replaced by known or readily surmisable
-successors".[14]</p>
+<h3>Harry Potter</h3>
+<h4>i. Harry Potter and the Philosopher Stone<br/>
+    ii. Harry Potter and the Goblet of Fire<br/>
+    iii. Harry Potter and the Order of Phoenix<br/>
+</h4>
+<p>Harry Potter is a sequel written by J.K. Rowling and these stories will keep people of any age group hooked</p>
+<h3>How to Train Your Dragon</h3>
+<p>This is an animatd movie probably by disney about vikings being able to ride on dragons instead of traditional way of fighting and killing them</p>
+<h3>Pushpa</h3>
+<p>Pushpa is an Indian movie with key role played by Allu Arjun. This movie is just a must watch Hindi Movies</p>
 
 
 
