--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<h1>
-<ul>
-    <li>A</li>
-    <li>B
-        <ol>
-            <li>B1</li>
-            <li>B2
-                <ul>
-                    <li>B2a
-                        <ul>
-                            <li>B2aa</li>
-                            <li>B2ab</li>
-                        </ul>
-                    </li>
-                    <li>B2b</li>
-                    <li>B2c</li>
-                </ul>
-            </li>
-            <li>B3
-                <ol>
-                    <li>B31</li>
-                    <LI>B32</LI>
-                </ol>
-            </li>
-        </ol>
-    </li>
-    <li>C</li>
-</ul>
-</h1>
+<h1>My top 5 Favourite Websites</h1>
+<ol>
+    <li><a href="https://www.facebook.com/home.php">Facebook</a></li>
+    <li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
+    <li><a href="https://www.jbhifi.com.au/">Tech stuffs</a></li>
+    <li><a href="https://www.youtube.com/">Youtube for videos</a></li>
+    <li><a href="https://github.com/">GitHub and post code</a></li>
+</ol>
