Learning about image tag

--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<h1>My top 5 Favourite Websites</h1>
-<ol>
-    <li><a href="https://www.facebook.com/home.php">Facebook</a></li>
-    <li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
-    <li><a href="https://www.jbhifi.com.au/">Tech stuffs</a></li>
-    <li><a href="https://www.youtube.com/">Youtube for videos</a></li>
-    <li><a href="https://github.com/">GitHub and post code</a></li>
-</ol>
+<h1>I am a cat person. I like cats.</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="A cute cat being held" />
+<h1>I am a dog person. I love dogs.</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="dog digging sand" />
