Birthday invite project

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<h1>I am a cat person. I like cats.</h1>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="A cute cat being held" />
-<h1>I am a dog person. I love dogs.</h1>
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="dog digging sand" />
+<h1>It's My Birthday!</h1>
+<h2>On the 8th of May</h2>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="birthday cake" />
+<h3>What to abring:</h3>
+<ul>
+    <li>Balloons(I love baloons)</li>
+    <li>Cake (I'm really good at eating)</li>
+    <li>An appetite (There will be lots of food)</li>
+</ul>
+<h3>This is where you need to go:</h3>
+<a href="https://www.google.com/maps/place/49+Alt+St,+Ashfield+NSW+2131/@-33.8834534,151.1222267,16z/data=!3m1!4b1!4m6!3m5!1s0x6b12babc71168a17:0xb464152d5b968bb4!8m2!3d-33.8834579!4d151.1248016!16s%2Fg%2F11c18d7p3b?entry=ttu">Google map link</a>
