--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
-<h1>All the Animals</h1>
-<h2>Rabbit:</h2>
-<img src="./rabbit.png" alt="rabbit"/>
-
-<h2>Cat:</h2>
-<img src="./Folder3/cat.png" alt="cute cat"/>
-
-<h2>Dog:</h2>
-<img src="../dog.png" alt="dog"/>
-
-<h2>Fish:</h2>
-<img src="../Folder1/fish.png" alt="Fish" />
-
-<h2>Bird:</h2>
-<img src="../Folder1/Folder2/bird.png" alt="Bird" />
+<h1>Welcome to My Website!</h1>
+<a href="./public/about.html"><img src="./assets/images/cat.png" /></a>
+<hr />
+<a href="./public/contact.html">Contact Me</a>
