--- a/index.html
+++ b/index.html
@@ -3,33 +3,30 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Colors</title>
-  <style>
-  /* Write your CSS code here. */
-    /* 1. Make the background of the webpage "antiquewhite"
-    2. Make the h1 "whitesmoke"
-    3. Make the background of the h1 "darkseagreen"
-    4. Make the h2 #FAF8F1
-    5. Make the background of the h2 "#C58940" */
-    html{
-      background-color: antiquewhite;
-    }
-
-    #heading1{
-      color: whitesmoke;
-      background-color: darkseagreen;
-    }
-
-    #heading2{
-      background-color: #C58940;
-      color: #FAF8F1;
-    }
-  </style>
+  <title>CSS Selectors</title>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
-  <h1 id="heading1">Hello</h1>
-  <h2 id="heading2">World</h2>
+  <h1>CSS Selectors</h1>
+  <h2>Applying CSS to Different Parts of HTML</h2>
+  <!-- TODO 1: Set the CSS for all paragraph tags to "color: red" -->
+  <p class="note">1. The element selector targets elements based on their HTML tag name.</p>
+
+  <ol>
+    <!-- TODO 2: Set the CSS for all elements with a class of "note" to "font-size: 20px" -->
+    <li class="note" value="2">Class selectors target elements based on the value of the class attribute.</li>
+
+    <!-- TODO 3: Set the CSS for the element with an id of "id-selector-demo" to "color: green" -->
+    <li class="note" id="id-selector-demo" value="3">ID selectors target elements based on the value of the id
+      attribute.</li>
+
+    <!-- TODO 4: Set the CSS for the li elements that have the "value" attribute set to "4" to have "color: blue" -->
+    <li class="note" value="4">Attribute selectors target elements based on their attributes and values.</li>
+
+    <!-- TODO 5: Set all elements to have "text-align: center" -->
+    <li class="note" value="5">The universal selector targets all elements.</li>
+  </ol>
 </body>
 
 </html>
